# pedal_communication

./: LICENSE  pyproject.toml
example/: main.py  mocked_device.py
pedal_communication/: __init__.py
pedal_communication/data/: __init__.py  data.py
pedal_communication/devices/: __init__.py  communication_protocol.py  generic_communication_protocol.py  generic_device.py  pedal_device.py  tcp_device.py  tcp_pedal_device.py  tpc_communication_protocol.py  udp_communication_protocol.py  udp_pedal_device.py
pedal_communication/misc/: __init__.py
pedal_communication/mockers/: __init__.py  device_mocker.py  pedal_device_mocker.py  tcp_device_mock.py  tcp_pedal_device_mocker.py  udp_pedal_device_mocker.py
runner/: main.py  mocked_device.py
