[build-system]
requires = [
    "setuptools", 
    "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name =  "pedal_communication"
description = "A generic interface to generate a virtual buddy"
dynamic = ["version"]
authors = [
    {name = "Pariterre", email = "pariterre@hotmail.com"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.10"
dependencies = [
    "numpy", 
    "matplotlib",
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/s2mLab/pedal_communication/tree/main#readme"
Source = "https://github.com/s2mLab/pedal_communication"
Tracker = "https://github.com/s2mLab/pedal_communication/issues"

# Auto-discover all packages inside the repo root
[tool.setuptools.packages.find]
where = ["."]
include = ["pedal_communication*"]

[tool.setuptools.dynamic]
version = {attr = "pedal_communication.version.__version__"}

# Any non *.py files that must be bundled with the package must be listed here. ** and * wildcards can be used
[tool.setuptools.package-data]
pedal_communication = []

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"